kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      -
        image: eslih/basic-webapp-api:v1.1.1
        name: api
        resources: {}
      restartPolicy: Always
