kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: api
status:
  loadBalancer: {}
