kubernetes/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: webapp
  name: webapp
spec:
  type: NodePort
  ports:
    - port: 5000
  selector:
    io.kompose.service: webapp
status:
  loadBalancer: {}
